# Kairos

./: .gitignore  Makefile  README.md  mapper.py  modular.py  notebook.py  pyproject.toml  todo.py
docs/: kairos_architecture.puml  readme.md  script_hf.py
kairos/: attentions.py  dataset.py  modeling.py  tokenizer.py  trainer.py
notebook/: kairos-training.ipynb  playground.py
scripts/: hf_copy.py
scripts/instruct-tool/: alpACE_map.py  readme.md
scripts/pretrain/: corpus_builder.py  readme.md  simple_push.py  wikidump.py
src/: dataset.py
tests/: test_attentions.py  test_modules.py
