[project]
name = "kairos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"

# Adapted for pip list in Kaggle
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "beautifulsoup4>=4.13.5",
    "datasets>=4.8",
    "einops>=0.8.2",
    "huggingface-hub>=1.10.1",
    "ipython>=7.34.0",
    "lxml>=6.0.3",
    "nbformat>=5.10.4",
    "pathspec>=1.1.1",
    "pytest>=8.4.2",
    "tensorboard>=2.19.0",
    "torch>=2.10.0",
    "transformers>=5.12.1", # mandatoy for gemma
]



[tool.setuptools]
packages = ["kairos"]


[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
  "integration"
]


[dependency-groups]
dev = [
    "libzim>=3.10.0",
    "marimo>=0.23.9",
    "mwparserfromhell>=0.7.2",
    "pytest-cov>=7.1.0",
]
